--- a/similarities/templates/index.html
+++ b/similarities/templates/index.html
@@ -2,6 +2,14 @@
 
 {% block body %}
 
-    <!-- TODO -->
+    <form action="/score" method="post">
+
+        String 1:<br>
+        <input type="text" name="string1"><br>
+        String 2:<br>
+        <input type="text" name="string2"><br>
+        <input type="submit" value="Score">
+
+    </form>
 
 {% endblock %}
