--- a/similarities/templates/matrix.html
+++ b/similarities/templates/matrix.html
@@ -1,1 +1,37 @@
-<!-- TODO -->
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            {% for char in s2 %}
+            <th>{{ char }}</th>
+            {% endfor %}
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            {% for i in range(s2 | length + 1) %}
+                <th>{{ i }}</th>
+            {% endfor %}
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th></th>
+            <th>0</th>
+            {% for x in matrix[0] %}
+                <td>{{ x[0] }} </td>
+            {% endfor %}
+        </tr>
+        {% for j in range(s1 | length) %}
+        <tr>
+            <th>{{ s1[j] }}</th>
+            <th>{{ j + 1 }}</th>
+            {% for y in matrix[j + 1] %}
+            <td>{{ y[0] }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
